[package]
name = "json_test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rustc-serialize = "0.3.4"
chrono = "0.4"
plotters = "0.3.3"
rand = "0.8.5"
sprintf = "0.1.3"
clap = { version = "4.0", features = ["derive"] }
exitcode = "1.1.2"
palette = "0.7.2"
colorous = "1.0.10"

[profile.dev]
debug-assertions=false
